[package]
name = "motsu"
version = "0.1.0"
authors = ["Sam Barr <samfbarr@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
luminance = "*"
luminance-derive = "*"
luminance-windowing = "*"
luminance-glfw = "*"
glfw = "*"
argh = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
