[package]
name = "motsu"
version = "0.1.0"
authors = ["Sam Barr <samfbarr@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
luminance = "*"
luminance-derive = "*"
luminance-glfw = "*"
glfw = "0.43.0"
argh = "*"

[dependencies.image]
version = "*"
default-features = false
features = [ "jpeg", "png" ]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
